GdkWindowX11: Prevent non renderered window to be display by the compositor

When mapping a window for the first time, make sure the compositor
won't display it until we're done painting.

https://bugzilla.gnome.org/show_bug.cgi?id=702196